instructions for building locally